--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ main .main-container{
     align-items: center;
 }
 .main-header h2{
-    color: #CCF244;
+    color: white;
     font-size: 2rem;
     letter-spacing: 0.6rem;
     font-weight: 700;
