--- a/main.css
+++ b/main.css
@@ -56,6 +56,25 @@ main .main-container{
 .main-container p{
     font-size: 1.8rem;
 }
+footer{
+    font-size: 1.8rem;
+    background-color: #f0b90b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #252525;
+    width: 100%;
+    height: 90px;
+}
+footer ul{
+    display: flex;
+    list-style: none;
+}
+footer li{
+    margin:0 20px;
+
+}
+
 
 
 @media (min-width: 426px){
