Correcion del footer, pensar movile first

--- a/main.css
+++ b/main.css
@@ -68,12 +68,11 @@ footer{
     margin: 20px 0 ;
 }
 footer ul{
-    display: flex;
-    list-style: none;
-}
-footer li{
-    margin:0 20px;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:5px 25px;
+    list-style-type: none;
+    justify-items: center;
 }
 
 
@@ -85,5 +84,9 @@ footer li{
     .main-header ul{
         display: flex;
     }
-
+    footer ul{
+        display: flex;
+        gap: 20px;
+    }
 }
+
